Add ability to delete bot messages
